--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
 - [ ] I'm not happy with how the Migrations have been lumped-in with build. This seems to be necessary in order to get
        Vercel's CI/CD to pick them up, but it means that I can't build-in-isolation locally. There must be a better way!
+- [ ] Provide alternative game-creation API with primitive single-winner version.
+- [ ] Look into whether `hasEvery` (in `processParsedGameInfo` in `api/seed/route.ts`) has a `hasEveryInOrder`
+       equivalent
